<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.itj.jband.ServiceAgreementActivity"
    tools:showIn="@layout/activity_service_agreement">

    <ScrollView
        android:id="@+id/agreement_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:text="@string/msg_service_agreement_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_service_aggrement_detail"/>

            <CheckBox
                android:id="@+id/checkbox_whole_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/label_checkbox_whole_agreement"/>

            <LinearLayout
                android:id="@+id/checkbox_group_i_love"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/checkbox_i_love"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_light"
                    android:text="@string/label_essential"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_i_love_service_agreement"/>

            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollview_i_love_agreement"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/agreement_sample"/>
            </ScrollView>

            <LinearLayout
                android:id="@+id/checkbox_group_personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/checkbox_personal_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_light"
                    android:text="@string/label_essential"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_info_collect_agreement"/>

            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollview_personal_info_agreement"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/agreement_sample"/>
            </ScrollView>

            <LinearLayout
                android:id="@+id/checkbox_group_pass_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/checkbox_pass_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_light"
                    android:text="@string/label_essential"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_info_support_aggrement"/>

            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollview_pass_info_agreement"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/agreement_sample"/>
            </ScrollView>

            <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_button_next"/>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
