<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserManagementActivity"
    tools:showIn="@layout/activity_user_management" >

    <RelativeLayout
        android:id="@+id/group_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginBottom="10dp" >

        <LinearLayout
            android:id="@+id/empty_image"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@android:color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_person_outline_black_48dp"
                android:text="@string/label_photo_register"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/image_button_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_photo"
        android:gravity="center_vertical">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_name"/>

        <EditText
            android:id="@+id/edit_text_name"
            android:singleLine="true"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_input_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_name"
        android:gravity="center_vertical">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_phone_number"/>

        <EditText
            android:id="@+id/edit_text_phone_number"
            android:singleLine="true"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_phone_number"
        android:gravity="center_vertical">

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radio_button_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_radio_button_male"
                android:layout_marginRight="20dp"/>

            <RadioButton
                android:id="@+id/radio_button_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_radio_button_female"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_height_weight"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_gender">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_height"/>

            <EditText
                android:id="@+id/edit_height"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_weight"/>

            <EditText
                android:id="@+id/edit_weight"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
